fix: dark mode toggle cleaned

--- a/style.css
+++ b/style.css
@@ -14,10 +14,5 @@ p {
 }.dark-mode {
   background-color: black;
   color: white;
-}.dark-mode {
-  background-color: black;
-  color: white;
 }
 
-
-}
